--- a/WebAplicacionCredito/Views/Shared/_Layout.cshtml
+++ b/WebAplicacionCredito/Views/Shared/_Layout.cshtml
@@ -30,6 +30,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="HistorialCliente" asp-action="Index">Historial Clientes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Garante" asp-action="Index">Garantes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CostoCuota" asp-action="Index">Cuotas</a>
+                        </li>
                     </ul>
                 </div>
             </div>
